navbar on mobile possible fix

--- a/firstTemplateStyles.css
+++ b/firstTemplateStyles.css
@@ -163,21 +163,20 @@ footer{
 		top:18px;
 		font-size:20px;
 	}
-	nav{
-		width:100%;
-	}
 	#jq-menu{
 		cursor: pointer;
 		position: absolute;
-		left:0px;
 		top:-50px;
+		right:0px;
 		display:block;
-		width:50%;
 		font-family: tahoma, arial;
 		font-size: 24px;
 		color:white;
 		line-height: 50px;
-		padding:5px 50% 5px 57%;
+		width:470px;
+		height:50px;
+		padding-left: 100%;
+		padding-bottom: 9px;
 		text-align: center;
 		background-color: orange;
 	}
